<?xml version="1.0"?>
<package>
  <name>mobility_base_gazebo</name>
  <version>0.0.1</version>
  <description>
    Example launch files for working with the Mobility Base Simulator
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>mobility_base_description</run_depend>
  <run_depend>mobility_base_gazebo_plugins</run_depend>

</package>
